# mixedvines

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  README.rst  copula.py  pyproject.toml  setup.cfg  setup.py
docs/: Makefile  api.rst  code_example.rst  conf.py  index.rst  installation.rst  intro.rst  prerequisites.rst  requirements.rst  source_code.rst  usage.rst
mixedvines/: __init__.py  copula.py  marginal.py  mixedvine.py
mixedvines/tests/: __init__.py  test_copula.py  test_marginal.py  test_mixedvine.py
src/mixedvines/: __init__.py  _utils.py  copula.py  marginal.py  mixedvine.py
tests/: test_copula.py  test_marginal.py  test_mixedvine.py
