# Copyright (C) 2021, 2022 Arno Onken
#
# This file is part of the mixedvines package.
#
# The mixedvines package is free software: you can redistribute it and/or
# modify it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or (at your
# option) any later version.
#
# The mixedvines package is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
# FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for
# more details.
#
# You should have received a copy of the GNU General Public License along with
# this program.  If not, see <http://www.gnu.org/licenses/>.
[build-system]
requires = ["flit_core>=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "mixedvines"
version = "1.3.3a1"
authors = [{name = "Arno Onken", email = "asnelt@asnelt.org"}]
description = "Canonical vine copula trees with mixed marginals"
readme = "README.rst"
license = {file="LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering"
]
keywords = [
    "copula",
    "mixed",
    "vine",
    "continuous",
    "dicrete",
    "entropy"
]

[project.urls]
"Homepage" = "https://github.com/asnelt/mixedvines"
"Documentation" = "https://mixedvines.readthedocs.io"
"Bug Tracker" = "https://github.com/asnelt/mixedvines/issues"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
