# Copyright (C) 2017-2019, 2021, 2022 Arno Onken
#
# This file is part of the mixedvines package.
#
# The mixedvines package is free software: you can redistribute it and/or
# modify it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or (at your
# option) any later version.
#
# The mixedvines package is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
# FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for
# more details.
#
# You should have received a copy of the GNU General Public License along with
# this program.  If not, see <http://www.gnu.org/licenses/>.
[metadata]
name = mixedvines
version = 1.3.1
author = Arno Onken
author_email = asnelt@asnelt.org
description = Canonical vine copula trees with mixed marginals
long_description = file: README.rst
long_description_content_type = text/x-rst
platforms = any
keywords =
    copula
    mixed
    vine
    continuous
    dicrete
    entropy
license = GPLv3+
license_file = LICENSE
url = https://github.com/asnelt/mixedvines
project_urls =
    Documentation = https://mixedvines.readthedocs.io
    Source = https://github.com/asnelt/mixedvines
    Bug Tracker = https://github.com/asnelt/mixedvines/issues
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
packages = mixedvines
platforms = any
include_package_data = True
install_requires =
    numpy
    scipy
python_requires = >=3.10
